--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
             <h1 class="title">PhishNet</h1>
             <p class="subtitle">Learn to identify phishing emails and protect yourself online</p>
             <button class="btn" onclick="showGameSetup()">Play Game</button>
-            <button class="btn secondary" onclick="showTutorial()">Tutorial</button>
-            <button class="btn secondary" onclick="showCustomEmailCreation()">Add Custom Email</button>
-            <button class="btn secondary" onclick="manageCustomEmails()">Manage Custom Emails</button>
+            <button class="btn" onclick="showTutorial()">Tutorial</button>
+            <button class="btn" onclick="showCustomEmailCreation()">Add Custom Email</button>
         </div>
 
         <div id="gameSetup" class="game-setup">
